crates/canvas-cli/tests/e2e/snapshots/exit_11.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 11,
  "freshness": [],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "error",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 1,
    "cost": null,
    "storage": 0
  },
  "result": {
    "code": "cancelled",
    "details": {},
    "http_status": null,
    "message": "submission cancelled",
    "server_errors": []
  },
  "schema": "canvas-cli/error@1",
  "warnings": []
}
