crates/canvas-cli/tests/e2e/snapshots/exit_12.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 12,
  "freshness": [
    {
      "complete": true,
      "count": 0,
      "dataset": "folders",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "course:60100",
      "source": "network",
      "stale": false
    },
    {
      "complete": true,
      "count": 1,
      "dataset": "files",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "course:60100",
      "source": "network",
      "stale": false
    },
    {
      "complete": true,
      "count": 1,
      "dataset": "modules",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "course:60100",
      "source": "network",
      "stale": false
    }
  ],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "partial",
  "partial": [
    {
      "http_status": 403,
      "message": "Folders listing unavailable (HTTP 403); folder paths unavailable",
      "scope": "folders:course:60100"
    }
  ],
  "profile": null,
  "requests": {
    "api": 3,
    "cost": null,
    "storage": 0
  },
  "result": {
    "course_id": "60100",
    "files": [
      {
        "folder_id": "60020",
        "folder_path": null,
        "hidden": false,
        "id": "60501",
        "lock_explanation": null,
        "locked": false,
        "module_id": null,
        "module_position": null,
        "name": "synthetic-file.pdf",
        "size": 2048,
        "source": "listing",
        "updated_at": null
      }
    ],
    "listing": {
      "available": true,
      "http_status": null
    }
  },
  "schema": "canvas-cli/files@1",
  "warnings": [
    "Folders listing unavailable (HTTP 403); folder paths unavailable"
  ]
}
