crates/canvas-cli/tests/e2e/snapshots/exit_13.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 13,
  "freshness": [],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": null,
  "outcome": "error",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "code": "local",
    "details": {},
    "http_status": null,
    "message": "cannot open identity store: database schema is newer than this binary (user_version=103, supported=3)",
    "server_errors": []
  },
  "schema": "canvas-cli/error@1",
  "warnings": []
}
