crates/canvas-cli/tests/e2e/snapshots/exit_13_credential_denied.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 13,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "1"
  },
  "outcome": "error",
  "partial": [],
  "profile": "default",
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "code": "local",
    "details": {},
    "http_status": null,
    "message": "logout could not delete every credential store entry; cleanup flags kept",
    "server_errors": []
  },
  "schema": "canvas-cli/error@1",
  "warnings": []
}
