crates/canvas-cli/tests/e2e/snapshots/exit_2.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 2,
  "freshness": [],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": null,
  "outcome": "error",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "code": "usage",
    "details": {},
    "http_status": null,
    "message": "sync cannot be used with --offline",
    "server_errors": []
  },
  "schema": "canvas-cli/error@1",
  "warnings": []
}
