crates/canvas-cli/tests/e2e/snapshots/exit_2_clap.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 2
--- stdout ---
--- stderr ---
error: the argument '--fresh' cannot be used with '--offline'

Usage: canvas courses --fresh --json --color <COLOR>

For more information, try '--help'.
