crates/canvas-cli/tests/e2e/snapshots/exit_3.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 3,
  "freshness": [],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "error",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 1,
    "cost": null,
    "storage": 0
  },
  "result": {
    "code": "auth",
    "details": {},
    "http_status": 401,
    "message": "unauthorized",
    "server_errors": []
  },
  "schema": "canvas-cli/error@1",
  "warnings": []
}
